fix synax error

--- a/2/miao1007.md
+++ b/2/miao1007.md
@@ -1,7 +1,7 @@
 [Miao1007](https://github.com/miao1007) 2014 -> 2015
 --------------
 ### 一、2014 总结
-从3月份开始入门Android开发，学Java语法，到现在能够做出一些小小的APP，对自己这年的努力非常开心！凭借着大一大二的谭浩强系列渣C语言基础，学习Java的基本语法费了很长的时间，但是现在能够看懂开源大神的Java代码了！
+从3月份开始入门Android开发，学Java语法，到现在能够做出一些材料设计APP，甚至能够写出教程，对自己这年的努力非常开心！凭借着大一大二的谭浩强系列渣C语言基础，学习Java的基本语法费了很长的时间，但是现在觉得自己没有选择错误，开发学习走上了正轨
 
 #### 成果
 1. 明确了自己未来的方向，本来我是通信工程专业的，但是转到Android开发上，意味着低起点多投入;
@@ -26,8 +26,8 @@
 
 ### 二、2015 展望
 #### 技术：
-1. 2014年不足的TODOS
-2. 计划开发一款基于SHH技术的针对OpenWRT的远程管理的客户端（A SSH Based Android Client for OpenWRT），并发布到恩山论坛以及Android论坛中，作为自己的毕业设计
+1. 上述不足的TODOS
+2. 由于自己在路由器上的热爱，计划开发一款基于SHH技术的针对OpenWRT的远程管理的客户端（A SSH Based Android Client for OpenWRT），并发布到恩山论坛以及Android论坛中，作为自己的毕业设计
 3. 准备针对Android面试的问题的自己解答
 4. 熟悉greenDAO框架在Android Studio下的使用
 
